// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Player Empty 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="root svelte-1lrurgd"
  >
    <audio
      autoplay=""
      class="svelte-1lrurgd"
      data-testid="audio"
    />
    <div
      class="content svelte-1lrurgd"
    >
      <span
        class="current svelte-1lrurgd"
      />
       
      <div
        class="player svelte-1lrurgd"
      >
        <span
          class="controls svelte-1lrurgd"
        >
          
           
          <span
            class="svelte-1y2tggl"
          >
            <button
              class="iconOnly noBorder svelte-1lod44n"
            >
              <i
                class="material-icons svelte-1lod44n"
              >
                shuffle
              </i>
               
               
               
            </button>
          </span>
           
          <button
            class="iconOnly noBorder svelte-1lod44n"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              skip_previous
            </i>
             
             
             
          </button>
           
          <button
            class="iconOnly large svelte-1lod44n"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="iconOnly noBorder svelte-1lod44n"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              skip_next
            </i>
             
             
             
          </button>
           
          <span
            class="svelte-1y2tggl"
          >
            <button
              class="iconOnly noBorder svelte-1lod44n"
            >
              <i
                class="material-icons svelte-1lod44n"
              >
                repeat
              </i>
               
               
               
            </button>
          </span>
           
        </span>
         
        <div
          class="svelte-1tahbl8"
        >
          <span
            class="svelte-1tahbl8"
          >
            0:00
          </span>
           
          <div
            class="wrapper w-full svelte-10ahnd8"
          >
            <input
              class="w-full svelte-10ahnd8"
              max="0"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-10ahnd8"
            >
              <span
                class="progress svelte-10ahnd8"
                style="right:100%"
              />
            </div>
          </div>
           
          <span
            class="svelte-1tahbl8"
          >
            0:00
          </span>
        </div>
      </div>
       
      <span
        class="volume svelte-1lrurgd"
      >
        <div
          class="svelte-t4pf46"
        >
          <span
            class="volume-slider svelte-t4pf46"
          >
            <div
              class="wrapper w-full svelte-10ahnd8"
            >
              <input
                class="w-full svelte-10ahnd8"
                max="100"
                min="0"
                type="range"
              />
               
              <div
                class="sliderTrack svelte-10ahnd8"
              >
                <span
                  class="progress svelte-10ahnd8"
                  style="right:0%"
                />
              </div>
            </div>
          </span>
           
          <button
            class="iconOnly noBorder svelte-1lod44n"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              volume_up
            </i>
             
             
             
          </button>
        </div>
      </span>
    </div>
  </div>
</section>
`;

exports[`Storyshots Components/Player With Track List 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="root svelte-1lrurgd"
  >
    <audio
      autoplay=""
      class="svelte-1lrurgd"
      data-testid="audio"
      src="./no-duration.mp3"
    />
    <div
      class="content svelte-1lrurgd"
    >
      <span
        class="current svelte-1lrurgd"
      >
        <div
          class="undefined root svelte-1bozxge"
        >
          <a
            class="flex-none"
            href="#/album/1"
          >
            <img
              alt="./# Films/cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-hn7eai"
              height="256"
              loading="lazy"
              src="./%23 Films/cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-1bozxge"
          >
            <span
              class="title svelte-1bozxge"
            >
              file 1
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Someone
              </a>
            </span>
          </div>
           
           
        </div>
      </span>
       
      <div
        class="player svelte-1lrurgd"
      >
        <span
          class="controls svelte-1lrurgd"
        >
          <span>
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper svelte-17zgehq"
            >
              <button
                class="iconOnly noBorder svelte-1lod44n"
              >
                <i
                  class="material-icons svelte-1lod44n"
                >
                  library_add
                </i>
                 
                 
                
                 
              </button>
            </span>
             
            
          </span>
          
           
          <span
            class="svelte-1y2tggl"
          >
            <button
              class="iconOnly noBorder svelte-1lod44n"
            >
              <i
                class="material-icons svelte-1lod44n"
              >
                shuffle
              </i>
               
               
               
            </button>
          </span>
           
          <button
            class="iconOnly noBorder svelte-1lod44n"
            disabled=""
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              skip_previous
            </i>
             
             
             
          </button>
           
          <button
            class="iconOnly large svelte-1lod44n"
            disabled=""
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="iconOnly noBorder svelte-1lod44n"
            disabled=""
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              skip_next
            </i>
             
             
             
          </button>
           
          <span
            class="svelte-1y2tggl"
          >
            <button
              class="iconOnly noBorder svelte-1lod44n"
            >
              <i
                class="material-icons svelte-1lod44n"
              >
                repeat
              </i>
               
               
               
            </button>
          </span>
           
          <button
            class="invisible iconOnly noBorder svelte-1lod44n"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              favorite_border
            </i>
             
             
             
          </button>
        </span>
         
        <div
          class="svelte-1tahbl8"
        >
          <span
            class="svelte-1tahbl8"
          >
            0:00
          </span>
           
          <div
            class="wrapper w-full svelte-10ahnd8"
          >
            <input
              class="w-full svelte-10ahnd8"
              max="0"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-10ahnd8"
            >
              <span
                class="progress svelte-10ahnd8"
                style="right:100%"
              />
            </div>
          </div>
           
          <span
            class="svelte-1tahbl8"
          >
            0:00
          </span>
        </div>
      </div>
       
      <span
        class="volume svelte-1lrurgd"
      >
        <div
          class="svelte-t4pf46"
        >
          <span
            class="volume-slider svelte-t4pf46"
          >
            <div
              class="wrapper w-full svelte-10ahnd8"
            >
              <input
                class="w-full svelte-10ahnd8"
                max="100"
                min="0"
                type="range"
              />
               
              <div
                class="sliderTrack svelte-10ahnd8"
              >
                <span
                  class="progress svelte-10ahnd8"
                  style="right:0%"
                />
              </div>
            </div>
          </span>
           
          <button
            class="iconOnly noBorder svelte-1lod44n"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              volume_up
            </i>
             
             
             
          </button>
        </div>
      </span>
    </div>
  </div>
</section>
`;
